--- a/src/app/client-list/client-list.component.html
+++ b/src/app/client-list/client-list.component.html
@@ -1,1 +1,21 @@
-<p>client-list works!</p>
+<h4>Client List</h4>
+<table class="table">
+    <thead>
+        <tr>
+                <th scope="col">#</th>
+                <th scope="col">First Name</th>
+                <th scope="col">Last Name</th>
+                <th scope="col">Address</th>
+                <th scope="col">Phone Numbers</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let client of clientList; index as i">
+            <th scope="row">{{i+1}}</th>
+            <td>{{client.firstName}}</td>
+            <td>{{client.lastName}}</td>
+            <td>{{client.address}}</td>
+            <td>{{client.phoneNumber}}</td>
+        </tr>
+    </tbody>
+</table>
