--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,12 @@
 <div class="container">
   <div class="row">
-    <div class="col">
+    <div class="col-md-5">
       <app-client-list></app-client-list>
 
     </div>
-    <div class="col">
-     <app-task-list></app-task-list>
+    <div class="col-md-7">
+     <!-- <app-task-list></app-task-list> -->
+     <router-outlet></router-outlet>
     </div>
   </div>
 </div>
