--- a/src/app/client-list/client-list.component.html
+++ b/src/app/client-list/client-list.component.html
@@ -1,5 +1,5 @@
 <h4>Client List</h4>
-<table class="table">
+<table class="table table-hover">
     <thead>
         <tr>
                 <th scope="col">#</th>
@@ -10,7 +10,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let client of clientList; index as i">
+        <tr *ngFor="let client of clientList; index as i" class="active">
             <th scope="row">{{i+1}}</th>
             <a [routerLink]="['/clients', client.id, 'tasks']"><td>{{client.firstName}}</td></a>
             <td>{{client.lastName}}</td>
