--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,7 +1,7 @@
 <div class="border pr-2 pl-2">
 <h4 class="mt-3">{{clientName}}'s Task List</h4> 
 <div class="text-right mb-3 mr-3">
-        <a [routerLink]="['create-task']" class="btn btn-primary ">Add New Task</a>
+        <a [routerLink]="['/clients', clientId,'create-task']" [queryParams]="{client:clientName}" class="btn btn-primary ">Add New Task</a>
     </div>
 
 
