post task ready

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,3 +13,19 @@ a {
     display: block;
     color:black;
 }
+
+input.ng-touched.ng-invalid{
+    border-color: red;
+}
+
+input.ng-valid{
+    border-color: green;
+}
+
+.green-icon{
+    color:green;
+}
+
+.red-icon{
+    color:red;
+}
