update task - populate form is in process

--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -23,6 +23,8 @@
         
             <tr *ngFor="let task of taskList; index as i">
                 <th scope="row">{{i+1}}</th>
+                <input type="hidden" name="id" [value]="task.id">
+
                 <td>{{task.taskName}}</td>
                 <td>{{task.description}}</td>
                 <td>{{task.clientAddress}}</td>
@@ -31,13 +33,13 @@
                 <div>
                 <td>
                     
-                    <button class="btn btn-sm" [routerLink]="['/task', task.Id, 'edit']">
-                        edit
+                    <button class="btn btn-sm" (click)="populateForm(task)">
+                        <i class="fas fa-edit"></i>
                     </button>
                 </td>
                 <td>
                     <button class="btn btn-sm" [routerLink]="['/task', task.Id, 'delete']">
-                        del
+                        <i class="fas fa-trash-alt red-icon"></i>
                     </button>
                 </td>
                 </div>
