get task list works correctly

--- a/src/app/task-form-create/task-form-create.component.html
+++ b/src/app/task-form-create/task-form-create.component.html
@@ -1,4 +1,4 @@
-<h4> {{ taskId == null ? headingCreate : headingUpdate }}</h4>
+<h4> {{ taskId == 0 ? headingCreate : headingUpdate }}</h4>
 
 
 <form #form="ngForm" autocomplete="off" (submit)="onSubmit(form)">
